axum-macros/tests/debug_handler/fail/with_rejection_not_into_response.stderr
error[E0277]: the trait bound `BadRejection: IntoResponse` is not satisfied
  --> tests/debug_handler/fail/with_rejection_not_into_response.rs:22:32
   |
22 |     WithRejection(payload, _): WithRejection<Json<Payload>, BadRejection>,
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `IntoResponse` is not implemented for `BadRejection`
  --> tests/debug_handler/fail/with_rejection_not_into_response.rs:7:1
   |
 7 | struct BadRejection;
   | ^^^^^^^^^^^^^^^^^^^
   = note: See `https://docs.rs/axum/0.8/axum/response/trait.IntoResponse.html` for details
   = help: the following other types implement trait `IntoResponse`:
             &'static [u8; N]
             &'static [u8]
             &'static str
             ()
             (R,)
             (Response<()>, R)
             (Response<()>, T1, R)
             (Response<()>, T1, T2, R)
           and $N others
   = help: see issue #48214
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
 1 + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `BadRejection: IntoResponse` is not satisfied
  --> tests/debug_handler/fail/with_rejection_not_into_response.rs:22:32
   |
22 |     WithRejection(payload, _): WithRejection<Json<Payload>, BadRejection>,
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `IntoResponse` is not implemented for `BadRejection`
  --> tests/debug_handler/fail/with_rejection_not_into_response.rs:7:1
   |
 7 | struct BadRejection;
   | ^^^^^^^^^^^^^^^^^^^
   = note: See `https://docs.rs/axum/0.8/axum/response/trait.IntoResponse.html` for details
   = help: the following other types implement trait `IntoResponse`:
             &'static [u8; N]
             &'static [u8]
             &'static str
             ()
             (R,)
             (Response<()>, R)
             (Response<()>, T1, R)
             (Response<()>, T1, T2, R)
           and $N others
note: required by a bound in `__axum_macros_check_handler_0_rejection_check`
  --> tests/debug_handler/fail/with_rejection_not_into_response.rs:22:32
   |
22 |     WithRejection(payload, _): WithRejection<Json<Payload>, BadRejection>,
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__axum_macros_check_handler_0_rejection_check`
